Final app version

--- a/client/main.css
+++ b/client/main.css
@@ -2,3 +2,20 @@ body {
   padding: 10px;
   font-family: sans-serif;
 }
+
+.spin {
+  display: inline-block;
+  width: 200px;
+  height: 200px;
+  border: 3px solid rgba(255,255,255,.3);
+  border-radius: 50%;
+  border-top-color: #007bff;
+  animation: spin 1s ease-in-out infinite;
+  -webkit-animation: spin 1s ease-in-out infinite;
+  }
+  @keyframes spin {
+  to { -webkit-transform: rotate(360deg); }
+  }
+  @-webkit-keyframes spin {
+  to { -webkit-transform: rotate(360deg); }
+  }
